examples/parse_error/division_by_zero_in_dimension_expr.nbt
fn f(x: Length^(2/0)) = 1
